= SciViews News

== SciViews version 0.9-8

* Several changes in character.R.


== SciViews version 0.9-7

* Small corrections in man pages.

* Partial argument matching for all(.names) in names(). Fixed.


== SciViews version 0.9-6

* Added further (misc) functions.

* New syntax using x@attr for attributes, plus := for replacement by reference
  inspired from data.table package, which Sciviews now imports too.


== SciViews version 0.9-5

* Added functions to homogenize function names for strings and files
  manipulations.
  

== SciViews version 0.9-4

* The gamma argument in hsv() function disappears in R 2.14.0. As a consequence,
  the same gamma argument is dropped from rwb.colors(), ryg.colors() and
  cwm.colors().


== SciViews version 0.9-3

* A bug in svd.pca() subfunction of pcomp.default() was corrected.


== SciViews version 0.9-2

* Slight style refactoring of R code and man pages.


== SciViews version 0.9-1

* Added lb() function as a synonym of log2().


== SciViews version 0.9-0

This is the first version on R-forge. There used to be a SciViews **bundle**
that contained svMisc, svSocket, svGUI, ..., but bundles are obsolete now. The
new SciViews package plays a similar role as the bundle, i.e., it is a
convenient way to install all SciViews-R packages with one instruction:

> install.packages("SciViews", dependencies = TRUE).

It now plays also other roles:
(1) to load all SciViews requirements with a single instruction:

> require(SciViews)

(2) To make sure to reconfigure the socket server properly (that is, with the
same configuration as latest one), (3) To provides a series of R functions that
ease learning of R through the use of the R reference toolbox in Komodo Edit.